@@ -1,3 +1,9 @@
+2004-09-14  Karl Berry  <karl@gnu.org>
+
+	* util/srclist.txt (getopt.h): renamed to getopt_.h.
+	* lib/getopt_.h: new file.
+	* lib/getopt.h: just include getopt.h.
+
 2004-09-09  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (Image Syntax): mention @noindent, @center.
